[package]
name = "scuttlebutt-announce"
version = "0.1.0"
authors = [
  "zentauro <pedrogomezmartin1999@gmail.com>",
  "pabloaceg <p.aceredag@gmail.com>"]
edition = "2018"
description = "A Scuttlebutt presence announcing implementation."
license = "AGPL-3.0-or-later"
keywords = ["scuttlebutt", "floss", "announce"]
categories = ["protocol"]
workspace = "src/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
